2016-11-15  Matteo Vescovi  <matteo(dot)vescovi(at)yahoo(dot)co(dot)uk>

	* apps/notepad++/**: merged latest Notepad++ plugintemplate
	sources in NppPresage plugin to enable support for 32-bit and
	64-bit presage notepad++ plugin builds.

2015-11-21  Matteo Vescovi  <matteo(dot)vescovi(at)yahoo(dot)co(dot)uk>

	* bindings/c/libpresage-1.def, bindings/c/presage_c_demo.c,
	src/lib/libpresage.map, src/lib/presage.cpp, src/lib/presage.h:
	expose the filtered predict() method in the C API.

2015-09-12  Matteo Vescovi  <matteo(dot)vescovi(at)yahoo(dot)co(dot)uk>

	* src/lib/libpresage.map, src/lib/presage.cpp, src/lib/presage.h,
	bindings/csharp/presage.net/IPresage.cs,
	bindings/csharp/presage.net/Presage.cs,
	bindings/csharp/presage_csharp_demo/presage_csharp_demo.cs,
	bindings/csharp/presage_wcf_service/IPresageService.cs,
	bindings/csharp/presage_wcf_service/PresageService.cs,
	bindings/csharp/presage_wcf_service_system_tray/AboutForm.Designer.cs,
	bindings/csharp/presage_wcf_service_system_tray/AboutForm.cs,
	bindings/csharp/presage_wcf_service_system_tray/AboutForm.resx:
	add version() to API to retrieve presage release version.

2015-09-05  Matteo Vescovi  <matteo(dot)vescovi(at)yahoo(dot)co(dot)uk>

	* resources/profiles/presage.xml.template
	src/lib/core/defaultProfile.cpp
	src/lib/predictors/dbconnector/databaseConnector.cpp
	src/lib/predictors/dbconnector/databaseConnector.h
	src/lib/predictors/smoothedNgramPredictor.cpp
	src/lib/predictors/smoothedNgramPredictor.h
	test/lib/predictors/dbconnector/databaseConnectorTest.cpp
	test/lib/predictors/dbconnector/databaseConnectorTest.h
	test/lib/predictors/dbconnector/sqliteDatabaseConnectorTest.cpp
	test/lib/predictors/newSmoothedNgramPredictorTest.cpp
	test/lib/predictors/smoothedNgramPredictorTest.cpp
	test/lib/predictors/smoothedNgramPredictorTest.h: add
	COUNT_THRESHOLD configuration variable to smoothed n-gram
	predictor to select suggestions that have a count greater than or
	equal the value specified.
